# neutron - Next-generation system SELinux policy
# Copyright (C) 2025 Rahul Sandhu <nvraxn@gmail.com>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License, as published by
# the Free Software Foundation, either version 3 of the License, or (at your
# option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

cil_files = [
    'apmnodedev.cil',
    'autofsnodedev.cil',
    'btrfscontrolnodedev.cil',
    'cachefilesnodedev.cil',
    'cdcwdmnodedev.cil',
    'clocknodedev.cil',
    'cpunodedev.cil',
    'crashnodedev.cil',
    'cusenodedev.cil',
    'dmaheapnodedev.cil',
    'dmcontrolnodedev.cil',
    'drinodedev.cil',
    'drmdpauxnodedev.cil',
    'eventnodedev.cil',
    'fbnodedev.cil',
    'gpionodedev.cil',
    'hiddevnodedev.cil',
    'hidrawnodedev.cil',
    'hwrngnodedev.cil',
    'i2cnodedev.cil',
    'iionodedev.cil',
    'infinibandnodedev.cil',
    'inputnodedev.cil',
    'ipminodedev.cil',
    'kfdnodedev.cil',
    'kmsgnodedev.cil',
    'ksmnodedev.cil',
    'kvmnodedev.cil',
    'lircnodedev.cil',
    'loopcontrolnodedev.cil',
    'mcelognodedev.cil',
    'meinodedev.cil',
    'memnodedev.cil',
    'modemnodedev.cil',
    'ndctlnodedev.cil',
    'nullnodedev.cil',
    'nvramnodedev.cil',
    'pmunodedev.cil',
    'pppnodedev.cil',
    'printernodedev.cil',
    'ptmxnodedev.cil',
    'qosnodedev.cil',
    'randomnodedev.cil',
    'rfkillnodedev.cil',
    'sndnodedev.cil',
    'tpmnodedev.cil',
    'ttynodedev.cil',
    'tuntapnodedev.cil',
    'udmabufnodedev.cil',
    'uffdnodedev.cil',
    'uhidnodedev.cil',
    'uinputnodedev.cil',
    'uionodedev.cil',
    'usbmonnodedev.cil',
    'usbnodedev.cil',
    'v4lnodedev.cil',
    'vfionodedev.cil',
    'vgaarbiternodedev.cil',
    'vhostnodedev.cil',
    'vmcinodedev.cil',
    'watchdognodedev.cil',
    'zeronodedev.cil',
]

foreach file : cil_files
    policy_sources += files(file)
endforeach
