# SPDX-FileCopyrightText: 2025 Rahul Sandhu <nvraxn@gmail.com>
# SPDX-License-Identifier: MIT

cil_files = [
    'editorconffile.cil',
    'environconffile.cil',
    'fstabconffile.cil',
    'hostsconffile.cil',
    'hushloginsconffile.cil',
    'inputrcconffile.cil',
    'localeconffile.cil',
    'logindefsconffile.cil',
    'mimeconffile.cil',
    'motdconffile.cil',
    'protocolsconffile.cil',
    'resolvconffile.cil',
    'selinuxconffile.cil',
    'servicesconffile.cil',
    'skelconffile.cil',
    'tcpwrappersconffile.cil',
    'terminfoconffile.cil',
]

foreach file : cil_files
    policy_sources += files(file)
endforeach
